# SM24

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README  README.md  benchmarks.cpp  dodo.py  main.cpp  mainMPI.cpp  mainMPIOpenMP.cpp  pyproject.toml
Polus/: launcher.lsf  mainMPIOpenMP.cpp  mainOpenMP.cpp  mpi.lsf  omp.lsf  omp_160_180.cpp  omp_80_90.cpp
docs/: algeb_meth.md  diff_schema.md  math_model.md  mpi+omp.md  mpi.md  omp.md  sol_images.md
src/: auxility.cpp  auxility.hpp  inc.h  linear.cpp  linear.hpp  main.cpp  mainOpenMP.cpp  mpi.cpp  mpi.hpp  openmp.cpp  openmp.hpp  plots.py  solution.cpp  solution.hpp
