[project]
name = "SupCompMod"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Ruslan Khaydarpashich", email = "h.ruslan2000@yandex.ru"},
]
dependencies = [
    "pre-commit",
    "doit",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
